Fix an occurrence of the HasLayout bug
In IE6/7 the absolute positioning of the toggle was causing the title-text to render out of line with the id and toggles.
Adding zoom:1 to the .subsection-title in ie6/7 stylesheets to fix.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -230,6 +230,10 @@
       display:block;
       position:relative;
 
+      @include ie-lte(7){
+        zoom:1;
+      }
+
       .js-toggle {
         height: 25px;
         width: 25px;
